--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
 asgiref
+certifi
+charset-normalizer
+cloudinary
 dj-database-url
 Django
+django-cloudinary-storage
 djangorestframework
 djangorestframework-jwt
 djangorestframework-simplejwt
+idna
 psycopg2
 PyJWT
 python-dotenv
 pytz
+requests
+setuptools
+six
 sqlparse
 typing_extensions
+tzdata
+urllib3
 whitenoise
